    type when called with 1 argument; PEEK-CHAR checked type of
    PEEK-TYPE only after having read first character from a
    stream.  (reported by Peter Graves)
  * bug fix: the garbage collector now has much better locality
    behaviour, and in particular no longer treats all memory as being
    exhausted when many small objects point to each other in a deeply
    recursive manner.
  * optimization: implemented multiplication as a modular
    (UNSIGNED-BYTE 32) operation on the x86 backend.
  * optimization: SEARCH on simple-base-strings can now be open-coded.
    (see also contrib/compiler-extras.lisp for inspiration for
    teaching the compiler about the Boyer-Moore algorithm).
  * value, returned by MAX (and MIN) called with several EQUALP, but
    not EQL, arguments now does not depend on compiler settings.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** in stack analysis liveness information is propagated from
       non-local entry points.
    ** pathwise CAST removing failed when the CAST node did not start
       a block.
    ** INPUT-STREAM-P, OUTPUT-STREAM-P, STREAM-ELEMENT-TYPE and
       OPEN-STREAM-P signal a TYPE-ERROR if their argument is not a
       stream.
    ** LOAD-LOGICAL-PATHNAME-TRANSLATIONS returns NIL if the logical
       host is already defined.
    ** RENAME-FILE works on streams instead of signalling an internal
       type error.
    ** PEEK-CHAR uses the current readtable when determining whether
       or not a character is whitespace.
    ** MERGE-PATHNAMES handles the case when the pathname does not
       specify a name while the default-pathname specifies a version.
    ** Pathnames now stand a better chance of respecting print/read
       consistency.
    ** Attempting to use standardized file system operators with a
       pathname with invalid :DIRECTORY components signals a
       FILE-ERROR.
    ** OPEN :DIRECTION :IO no longer fails to work on non-existent
       files.