@@ -2257,6 +2257,8 @@ changes in sbcl-0.8.8 relative to sbcl-0.8.7:
     behaviour, and in particular no longer treats all memory as being
     exhausted when many small objects point to each other in a deeply
     recursive manner.
+  * bug fix: arrays specialized on (UNSIGNED-BYTE 15) are now
+    recognized as being TYPEP their class.
   * optimization: implemented multiplication as a modular
     (UNSIGNED-BYTE 32) operation on the x86 backend.
   * optimization: SEARCH on simple-base-strings can now be open-coded.
